--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 <ul>
   <li> <a href="https://www.douban.com/people/yiaer/statuses?p=1">db</a> </li>
-  <li> <a href="https://mobile.twitter.com/Wesleylee630">db</a> </li>
-  <li> <a href="https://matters.news/@Wesleylee630">FF</a> </li>
+  <li> <a href="https://mobile.twitter.com/Wesleylee630">twitter</a> </li>
+  <li> <a href="https://matters.news/@Wesleylee630">matters</a> </li>
 </ul>
